Use the new DebugSbtChildProcessMaker to test SbtChild in unit tests
Previously this could only be done in integration test.